add animation slide chat

--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div class="chat-wrapper">
-		<div class="chat-header">
+	<div id="chat-wrapper" class="chat-wrapper">
+	<a href="#" id="click-chat-header" class="click-chat-header">
+		<div id="chat-header" class="chat-header">
 			<img src="img/bot-avatar.jpg" alt="Менеджер">
-
 			<div class="chat-name">
-			<div class="bot-status"></div>
-				<span class="bot-name">Анастасия Зорина</span><br>
-				<span class="bot-description">Менеджер</span>
-				<div class="clear"></div>
-			</div>
+				<div class="bot-status"></div>
+					<span class="bot-name">Анастасия Зорина</span><br>
+					<span class="bot-description">Менеджер</span>
+					<div class="clear"></div>
+				</div>
 		</div>
-
+	</a>
 		<div class="chat-main">
-			
+			<div class="chat-content">
+				
+			</div>
 		</div>
 		<div id="chat-input" class="chat-input">
 			<form action="">
@@ -30,6 +32,8 @@
 			<div class="clear"></div>
 		</div>
 	</div>
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
