add chat dialog - bot and user

--- a/index.html
+++ b/index.html
@@ -20,15 +20,21 @@
 		</div>
 	</a>
 		<div class="chat-main">
-			<div class="chat-content">
+			<div id="chat-content" class="chat-content">
+			<!--<div id="text-block" class="text-block"><span id="block" class="bot-block _block">Здравствуйте, вас интересует разработка сайтов? Я могу проконсультировать</span></div>
+
+			
+			<div id="text-block" class="text-block"><span id="block" class="user-block _block">Здравствуйте, вас интересует разработка сайтов? Я могу проконсультировать</span></div>
+			<div class="clear"></div> -->
 				
 			</div>
+
 		</div>
 		<div id="chat-input" class="chat-input">
 			<form action="">
-				<input type="text" placeholder="Задайте ваш вопрос...">
+				<input name="user-input" type="text" placeholder="Задайте ваш вопрос...">
 			</form>
-			<a href="#" class="btn">OK</a>
+			<a href="#" id="btn-text" class="btn">OK</a>
 			<div class="clear"></div>
 		</div>
 	</div>
