--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				</div>
 		</div>
 	</a>
-		<div class="chat-main">
+		<div id="chat-main" class="chat-main">
 			<div id="chat-content" class="chat-content">
 			<!--<div id="text-block" class="text-block"><span id="block" class="bot-block _block">Здравствуйте, вас интересует разработка сайтов? Я могу проконсультировать</span></div>
 
